# NPCPU

./: .dockerignore  .gitignore  ABSTRACTION_IMPROVEMENT_SUMMARY.md  AGENT_WORKSTREAMS.md  AI_README.md  Agent_parallel.md  DEEP_DIVE_COMPLETE_ANALYSIS.md  DEPLOYMENT.md  Dockerfile  README.md  README_INITIATIVES.md  claude-mcp-setup.md  docker-compose.yml  npcpu_config.yaml  pyproject.toml  requirements-dev.txt  requirements-full.txt  requirements.txt  run_simulation.py
adapters/: __init__.py  chromadb_adapter.py  pinecone_adapter.py
agi/: __init__.py  metacognitive_architecture.py
api/: __init__.py  models.py  routes.py  server.py
architecture/: abstraction_layers.md
asi/: __init__.py  superintelligence.py
benchmarks/: __init__.py  consciousness_benchmarks.py  performance.py
chromadb_substrate/: main.py  requirements.txt
cli/: __init__.py  simulation_cli.py
cognitive/: agent_paradigm.md
consciousness/: __init__.py  adaptive_consciousness.py  metabolism_coupling.py  multimodal_consciousness.py  neural_consciousness.py  transfer.py
coordination/: agent_coordination_matrix.md  bim_agent_coordination.py  scale_architecture.yaml
core/: __init__.py  abstractions.py  config.py  events.py  plugins.py  simple_organism.py
cosmic/: __init__.py  interstellar_consciousness.py  universal_consciousness.py
custom-mcp-server/: npcpu-mcp-server.js  package.json
deployment/: chromadb-cache-strategy.py  chromadb-scaling-architecture.py  cloudflare_architecture.md  enhanced-chromadb-manager.py  git_workflow_npcpu.md  localgreenchain_deployment_strategy.md  npcpu-agent-orchestrator.py  npcpu_cloudflare_deployment.md  project_initialization.md  quick_start.md
docs/: GETTING_STARTED.md
economics/: __init__.py  currency.py  economic_agents.py  markets.py  resources.py  scarcity.py  tertiary_integration.py  trade.py  wealth_distribution.py
ecosystem/: __init__.py  population.py  world.py  world_generator.py
emergent_intelligence/: main.py
endocrine/: __init__.py  circadian_rhythm.py  feedback_loops.py  hormones.py  metabolism_coupling.py  neuroendocrine.py  receptor.py  reward_system.py  social_bonding.py  stress_response.py
evolution/: __init__.py  consciousness_evolution.py  epigenetics.py  evolutionary_arms_race.py  evolutionary_innovation.py  extinction_dynamics.py  genetic_engine.py  horizontal_transfer.py  mutations.py  niche_construction.py  phylogenetic_viz.py  sexual_selection.py  speciation.py
examples/: immediate_implementation_guide.py  no_dependencies_demo.py  practical_consciousness_app.py
factory/: __init__.py  consciousness_factory.py  quantum_consciousness_factory.py
funding/: cost_breakdown.md  npcpu_manifesto.md
immune/: __init__.py  adaptive_immunity.py  antibody_system.py  autoimmune.py  defense.py  inflammation.py  innate_immunity.py  memory_cells.py  pathogen_detection.py  repair.py
infrastructure/: topology.md
initiatives/: PROJECT_TEMPLATE.md  README.md
integration/: protocol_manifold.md
learning/: __init__.py  memory_systems.py  reinforcement.py
manifests/: cognitive_substrate.yaml
mcp/: README.md  README_ARCHITECTURE.md  README_COUPLING.md  coupling_validation_system.ts  filesystem_substrate.yaml  integrity_preservation.ts  substrate_coupling.yaml  test_substrate.ts  topological_transformations.ts
mcp-universal/: server.js
minecraft/: README.md  __init__.py  behaviors.py  bot.js  bridge.py  colony.py  ecosystem_runner.py  memory.py  organism_adapter.py  package.json  world_adapter.py
monitoring/: __init__.py  consciousness_monitor.py  server.py
motor/: __init__.py  action.py
nervous/: __init__.py  coordination.py
neural/: __init__.py  attention_layers.py  dream_states.py  long_term_potentiation.py  neural_consciousness.py  neural_oscillations.py  neuroplasticity.py  spike_timing.py  synaptic_pruning.py  transformer_consciousness.py
orchestration/: temporal_coordination.md
organism/: __init__.py  digital_body.py  homeostasis.py  lifecycle.py  metabolism.py
persistence/: __init__.py  recorder.py  replay.py
philosophy/: ontological_framework.md
planetary/: __init__.py  biosphere.py  climate_feedback.py  extinction_events.py  gaia_consciousness.py  global_consciousness.py  migration_patterns.py  planetary_memory.py  resource_cycles.py  tipping_points.py
plugins/: __init__.py  analytics_plugin.py
protocols/: consciousness.py  storage.py  transformations.py
quantum/: __init__.py  coherence.py  entanglement.py  measurement.py  quantum_consciousness.py  quantum_memory.py  quantum_state.py  tunneling.py
reasoning/: __init__.py  causal_consciousness.py
research/: deep_dive_consciousness_theory.md  deep_dive_storage_architecture.md  (+1 more)
sensory/: __init__.py  (+10 more)
(+131 files in other folders)
