[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "npcpu"
version = "0.1.0"
description = "Non-Player Cognitive Processing Unit - Consciousness-aware distributed computing framework"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "NPCPU Team"}
]
keywords = [
    "consciousness",
    "simulation",
    "artificial-life",
    "digital-organisms",
    "distributed-computing",
    "evolution",
    "emergence"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Artificial Life",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
# Configuration support
config = ["pyyaml>=6.0"]

# Vector storage backends
chromadb = ["chromadb>=0.4.0"]
pinecone = ["pinecone-client>=2.0"]

# Machine learning features
ml = ["scikit-learn>=1.3.0"]
neural = ["torch>=2.0.0"]

# Monitoring and visualization
monitoring = ["websockets>=12.0"]
viz = ["matplotlib>=3.7.0"]
rich = ["rich>=13.0.0"]

# Web API
api = ["fastapi>=0.104.0", "uvicorn>=0.24.0"]

# Full installation (all features)
full = [
    "pyyaml>=6.0",
    "chromadb>=0.4.0",
    "scikit-learn>=1.3.0",
    "websockets>=12.0",
    "matplotlib>=3.7.0",
    "rich>=13.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pandas>=2.0.0",
]

# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.1",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.4.0",
]

[project.scripts]
npcpu = "run_simulation:main"
npcpu-monitor = "monitoring.server:main"
npcpu-stats = "simulation.statistics:main"
npcpu-saves = "simulation.persistence:main"

[project.urls]
Homepage = "https://github.com/vespo92/NPCPU"
Documentation = "https://github.com/vespo92/NPCPU#readme"
Repository = "https://github.com/vespo92/NPCPU"
Issues = "https://github.com/vespo92/NPCPU/issues"

[tool.setuptools]
packages = [
    "protocols",
    "adapters",
    "factory",
    "organism",
    "ecosystem",
    "evolution",
    "simulation",
    "sensory",
    "motor",
    "nervous",
    "neural",
    "endocrine",
    "immune",
    "consciousness",
    "reasoning",
    "agi",
    "asi",
    "cosmic",
    "quantum",
    "planetary",
    "swarm",
    "monitoring",
    "minecraft",
    "cognitive",
    "deployment",
    "mcp",
]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

# =============================================================================
# Tool Configuration
# =============================================================================

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"tests/*" = ["F401", "F811"]
"examples/*" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests", "examples", "docs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["protocols", "organism", "ecosystem", "simulation"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
